# palette-server-ros2

./: .gitmodules  README.md  palette-uml-classes.drawio
adapter-pkg/: CMakeLists.txt  package.xml
adapter-pkg/inc/: extra-constants.hh  supporting.hh
adapter-pkg/inc/adapter-pkg/: adapter.hh  dobot-manipulator-model-node.hh  painter-model-node.hh  painter-model-node.txx  params-db.hh  walking-platform-model-node.hh
adapter-pkg/inc/adapter-pkg/template/: painter-model-node.txx
adapter-pkg/src/: adapter.cc  dobot-manipulator-model-node.cc  painter-model-node.cc  params-db.cc  walking-platform-model-node.cc
api-pkg/: CMakeLists.txt  package.xml
docs/: palette-uml-classes.drawio
server-core-pkg/: CMakeLists.txt  package.xml
server-core-pkg/inc/server-core-pkg/: server-core.hh
server-core-pkg/launch/: core.launch.py
server-core-pkg/src/: main.cc  server-core.cc
ui-pkg/: CMakeLists.txt  package.xml
